--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ t<!DOCTYPE h tml>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>My Cheat Sheet</title>
-      <link rel="stylesheet" href="./resources/CSS/styles.css">
+      <link rel="stylesheet" href="styles.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Protest+Revolution&display=swap" rel="stylesheet">
