--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>My Cheat Sheet</title>
+      <title>My Cheat Sheet Github Verison</title>
       <link rel="stylesheet" href="https://github.com/marlonmunoz/marloncheatsheet.github.io/blob/main/styles.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
