--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       <link href="https://fonts.googleapis.com/css2?family=Protest+Revolution&display=swap" rel="stylesheet">
   <body>
       <header class="title">
-          <h1>ccs: samurai cheat sheet</h1>
+          <h1>ccs: samurai cheat sheet 1</h1>
       </header>
   
       <!-- Navigation -->
       <!-- <nav>
           <ul class="navigation">
               <li class="blue"><a href="">CCS</a></li>
-              <li><a href="">Properties</a></li>
+              <li><a href="">Properties</a></li> 
           </ul>
       </nav> -->
       <article>
